feat:complete style

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <div class="services-group">
             <div class="services-1">
 
-                <img src="i1.svg" alt="" class="icon-services">
+                <img src="img/i1.svg" alt="" class="icon-services">
                 <h3> SERVICIO 1</h3>
                 <p>Domicilio</p>
                 <p>
