feat: Finished project

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             </div>
 
             <div class="services-1">
-                <img src="i2.svg" alt=""  class="icon-services">
+                <img src="img/i2.svg" alt=""  class="icon-services">
                 <h3>SERVICIO 2</h3>
                 <p>CORTE DE PELO</p>
                 <p>
@@ -128,16 +128,16 @@
                 <button class="btn btn-danger" onclick="toggleInfo(2)">Saber más</button>
                 <div id="additional-info2" style="display: none;">
                     <div class="container1 d-flex justify-content-center">
-                        <img class="img-container" src="corte1.jpg" width="300">
-                        <img class="img-container" src="corte2.jpg" width="300">
-                        <img class="img-container" src="corte3.jpg" width="300">
+                        <img class="img-container" src="img/corte1.jpg" width="300">
+                        <img class="img-container" src="img/corte2.jpg" width="300">
+                        <img class="img-container" src="img/corte3.jpg" width="300">
                     </div>
                 </div>
             </div>
         </div>
 
         <div class="services-1">
-            <img src="i3.svg" alt=""  class="icon-services">
+            <img src="img/i3.svg" alt=""  class="icon-services">
             <h3> SERVICIO 3</h3>
             <p>
                 Corte de barba
@@ -148,9 +148,9 @@
             <button class="btn btn-danger" onclick="toggleInfo(3)">Saber más</button>
             <div id="additional-info3" style="display: none;">
                 <div class="container1 d-flex justify-content-center">
-                    <img class="img-container" src="corte1.jpg" width="300">
-                    <img class="img-container" src="corte2.jpg" width="300">
-                    <img class="img-container" src="corte3.jpg" width="300">
+                    <img class="img-container" src="img/barba1.jpg" width="300">
+                    <img class="img-container" src="img/barba2.jpg" width="300">
+                    <img class="img-container" src="img/barba3.jpg" width="300">
                 </div>
             </div>
         </div>
@@ -211,7 +211,9 @@
         </div>
 
         <div class="footer-txt">
-            <span> Barberia Judiaz/2024</span>
+            <span> Barberia Judiaz/<script> 
+                 document.write(new Date().getFullYear());
+                </script></span>
         </div>
 
     </footer>
